[metadata]
name = EroSmb
version = 0.1.0
description = EroSmb is a fast smb network scanner
keywords = smb, scanner
license = MIT
long_description = file: README.rst

[options]
packages = erosmb
install_requires =
    impacket
    colorama

[options.entry_points]
console_scripts =
    erosmb = erosmb:main