[metadata]
name = EroSmb
version = attr: erosmb.__version__
description = EroSmb is a fast smb network scanner
keywords = smb, scanner, security, enumeration, infosec, pentest
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = erosmb
install_requires =
    impacket
    colorama

[options.entry_points]
console_scripts =
    erosmb = erosmb:main